src/objects/PaymentMethod__c.object
<CustomObject>
    <fields>
        <fullName>ContractReview__c</fullName>
        <label>合同预审表</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>ContractReview</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>订单</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Order</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>付款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivableAmount__c</fullName>
        <label>回款总金额（万）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemittanceRatio__c</fullName>
        <label>回款比例</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RepaymentAmount__c</fullName>
        <formula>ContractReview__r.ContractAmount__c*RemittanceRatio__c</formula>
        <label>回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>第一笔（预付款）</fullName>
                </value>
                <value>
                    <fullName>第二笔款</fullName>
                </value>
                <value>
                    <fullName>第三笔款</fullName>
                </value>
                <value>
                    <fullName>第四笔款</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnpaidAmount__c</fullName>
        <formula>ContractReview__r.ContractAmount__c-RepaymentAmount__c</formula>
        <label>未回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddzje__c</fullName>
        <formula>/*Order__r.ddcpzje__c*/
0</formula>
        <label>订单总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>付款方式</label>
    <nameField>
        <displayFormat>FK-{00000000}</displayFormat>
        <label>付款方式编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>付款方式</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>